# infishark

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh  rustfmt.toml
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: adapter.rs  bridge.rs  crack.rs  deauth.rs  handshake.rs  hid.rs  hidraw.rs  main.rs  manage.rs  monitor.rs  portal.rs  ports.rs  shell.rs  signals.rs  target.rs  ui.rs
cli/src/art/: shark.txt  wordmark.txt
core/: Cargo.toml
core/examples/: ble_scan.rs  device_info.rs  wifi_scan.rs
core/src/: client.rs  company.rs  crc.rs  demux.rs  error.rs  frame.rs  handshake.rs  hex.rs  ieee80211.rs  ir.rs  ir_file.rs  json.rs  lib.rs  model.rs  monitor.rs  oui.rs  paths.rs  pcap.rs  protocol.rs  registry.rs  response.rs  serial.rs  transport.rs
