[package]
name = "infishark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for the InfiShark BLEShark Nano: a typed device client over a framed serial transport."
keywords = ["ble", "wifi", "security", "esp32", "serial"]
categories = ["hardware-support", "network-programming"]

[dependencies]
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
ureq = "2"
